--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div> <!-- Este div es donde se montará tu aplicación React -->
-    <script type="module" src="/src/main.jsx"></script> <!-- Este script carga tu aplicación React -->
+    <script type="module" src="./src/main.jsx"></script> <!-- Este script carga tu aplicación React -->
 </body>
 </html>
